# learning-opengl

./: .gitignore  CMakeLists.txt  GL01Hello.cpp  README.md  build.sh
FirstSteps/: build.sh
FirstSteps/src/: GL01Hello.cc
SecondSteps/: CMakeLists.txt  build.sh
SecondSteps/include/glad/: glad.h
SecondSteps/src/: GLT02.cc  glad.c
SecondSteps/src/shad/: screen_vert.vert  tex_frag.frag  tex_vert.vert
src/: GL01Hello.cc
